--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <!-- <div id="app"></div> -->
-    <script src="./libs/fas.js"></script>
+    <script src="/fas.js"></script>
     <script type="module">
       import {App} from "./app.js";
       
